feat(websocket): successfully connected and linked to the server