@@ -1,54 +1,4 @@
 package com.marlodev.app_android.repository;
-//
-//import android.util.Log;
-//
-//import androidx.lifecycle.LiveData;
-//import androidx.lifecycle.MutableLiveData;
-//
-//import com.marlodev.app_android.domain.Product;
-//import com.marlodev.app_android.network.ApiClient;
-//import com.marlodev.app_android.network.ProductApiService;
-//
-//import java.util.ArrayList;
-//import java.util.List;
-//
-//import retrofit2.Call;
-//import retrofit2.Callback;
-//import retrofit2.Response;
-//
-//public class ProductRepository {
-//
-//    private final ProductApiService apiService;
-//
-//    public ProductRepository() {
-//        apiService = ApiClient.getRetrofitInstance().create(ProductApiService.class);
-//    }
-//
-//    public LiveData<ArrayList<Product>> getProducts() {
-//        MutableLiveData<ArrayList<Product>> data = new MutableLiveData<>();
-//
-//        apiService.getProducts().enqueue(new Callback<List<Product>>() {
-//            @Override
-//            public void onResponse(Call<List<Product>> call, Response<List<Product>> response) {
-//                if (response.isSuccessful() && response.body() != null) {
-//                    data.setValue(new ArrayList<>(response.body()));
-//                } else {
-//                    data.setValue(new ArrayList<>());
-//                    Log.e("ProductRepository", "Error: response.body() null o fallida");
-//                }
-//            }
-//
-//            @Override
-//            public void onFailure(Call<List<Product>> call, Throwable t) {
-//                t.printStackTrace();
-//                data.setValue(new ArrayList<>());
-//            }
-//        });
-//
-//        return data;}
-//
-//}
-
 
 
 import androidx.lifecycle.LiveData;
@@ -61,6 +11,7 @@ import com.marlodev.app_android.network.ProductApiService;
 import com.marlodev.app_android.network.ProductWebSocketManager;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -95,14 +46,24 @@ public class ProductRepository {
                 currentList.add(0, created);
                 break;
 
+
             case "UPDATE":
                 for (int i = 0; i < currentList.size(); i++) {
-                    if (Objects.equals(currentList.get(i).getId(), event.id) ){
-                        currentList.set(i, Product.fromWebSocketEvent(event));
+                    if (Objects.equals(currentList.get(i).getId(), event.id)) {
+                        Product updated = Product.fromWebSocketEvent(event);
+
+                        // ✅ Evita que imageUrls sea null
+                        if (updated.getImageUrls() == null) {
+                            updated.setImageUrls(Collections.emptyList());
+                        }
+
+                        currentList.set(i, updated);
                         break;
                     }
                 }
                 break;
+
+
 
 
 
@@ -111,14 +72,21 @@ public class ProductRepository {
                 currentList.removeIf(p -> p.getId() == event.id);
                 break;
 
+
+
             case "IMAGES_UPDATE":
                 for (Product p : currentList) {
                     if (p.getId() == event.id) {
-                        p.setImageUrls(List.of(event.imageUrl));
+                        if (event.imageUrl != null && !event.imageUrl.trim().isEmpty()) {
+                            p.setImageUrls(List.of(event.imageUrl));
+                        } else {
+                            p.setImageUrls(Collections.emptyList()); // ← sin imágenes
+                        }
                         break;
                     }
                 }
                 break;
+
         }
 
         productsLiveData.postValue(currentList);
